fix: ArticleBackupServiceTest 오류 수정